Featrue-1.0.0-图片保存文件格式确定 原因： 1）无 修改： 1）保存图片的文件前缀添加图片id

--- a/picMap_backend/package.json
+++ b/picMap_backend/package.json
@@ -13,6 +13,8 @@
     "formidable": "^3.5.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "lodash": "^4.17.21",
+    "morgan": "~1.9.1",
+    "mysql2": "^3.12.0"
   }
 }
