--- a/picMap_backend/package.json
+++ b/picMap_backend/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "formidable": "^3.5.2",
+    "glob": "^11.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "lodash": "^4.17.21",
