Bug-1.0.0-图片id每次上传的都不一样问题修复 原因： 1）每次上传的uid都不一样，所以需要重新生成一下 修改： 1）通过uuid库生成图片的id

--- a/picMap_fontend/package.json
+++ b/picMap_fontend/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
     "pinia": "^2.3.0",
+    "uuid": "^11.0.5",
     "vue": "^3.3.11",
     "vue-router": "^4.5.0"
   },
