--- a/picMap_fontend/package.json
+++ b/picMap_fontend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.1",
     "pinia": "^2.3.0",
     "uuid": "^11.0.5",
     "vue": "^3.3.11",
