--- a/picMap_backend/package.json
+++ b/picMap_backend/package.json
@@ -16,6 +16,8 @@
     "jade": "~1.11.0",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "nodemon": "^3.1.9",
+    "sharp": "^0.33.5"
   }
 }
