--- a/picMap_fontend/package.json
+++ b/picMap_fontend/package.json
@@ -25,7 +25,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vue/runtime-core": "^3.5.13",
+    "@vue/runtime-dom": "^3.5.13",
     "sass": "^1.83.0",
-    "vite": "^5.0.8"
+    "typescript": "^5.8.3",
+    "vite": "^5.0.8",
+    "vue-tsc": "^2.2.10"
   }
 }
