--- a/picMap_fontend/package.json
+++ b/picMap_fontend/package.json
@@ -21,7 +21,8 @@
     "pinia": "^2.3.0",
     "uuid": "^11.0.5",
     "vue": "^3.3.11",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
