Featrue-1.0.0-图片分组定位功能以及节点聚合为簇功能 原因： 1）无 修改： 1）无

--- a/picMap_fontend/package.json
+++ b/picMap_fontend/package.json
@@ -16,6 +16,7 @@
     "exifreader": "^4.25.0",
     "express": "^4.21.2",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "pinia": "^2.3.0",
