--- a/picMap_fontend/package.json
+++ b/picMap_fontend/package.json
@@ -19,6 +19,7 @@
     "leaflet.markercluster": "^1.5.3",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
+    "moment": "^2.30.1",
     "pinia": "^2.3.0",
     "uuid": "^11.0.5",
     "vue": "^3.3.11",
