--- a/picMap_fontend/package.json
+++ b/picMap_fontend/package.json
@@ -33,6 +33,7 @@
     "sass": "^1.83.0",
     "typescript": "^5.8.3",
     "vite": "^5.0.8",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.2.10"
   }
 }
