--- a/picMap_fontend/package.json
+++ b/picMap_fontend/package.json
@@ -24,6 +24,7 @@
     "uuid": "^11.0.5",
     "vue": "^3.3.11",
     "vue-countup-v3": "^1.4.2",
+    "vue-cropper": "^0.6.5",
     "vue-router": "^4.5.0",
     "vuedraggable": "^4.1.0"
   },
