--- a/picMap_fontend/package.json
+++ b/picMap_fontend/package.json
@@ -25,6 +25,7 @@
     "vue": "^3.3.11",
     "vue-countup-v3": "^1.4.2",
     "vue-cropper": "^0.6.5",
+    "vue-i18n": "^11.1.10",
     "vue-router": "^4.5.0",
     "vuedraggable": "^4.1.0"
   },
